--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ img {
     display: block;
     max-width: 100%;
     height: auto;
+    
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -31,6 +32,15 @@ h1, h2, h3, h4, h5, h6, p {
     margin-bottom: 0;
 }
 
+html {
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
     
 .body {
     font-family: "Roboto", sans-serif;
@@ -492,8 +502,8 @@ display: flex;
 justify-content: center;
 }
 .comand-soc-item{
-    width: 20px;
-    height: 20px;
+    /*width: 20px;
+    height: 20px;*/
     margin-right: 10px; ;
 }
 .comand-soc-item:last-child{
@@ -501,16 +511,24 @@ justify-content: center;
 }
 
 .comand-soc-link{
-   width: 100%;
-    height: 100%;
-    background-color: #2196F3;
+   /* width: 100%;
+    height: 100%;*/
+    width: 44px;
+    height: 44px;  
+    background-color: var(--two-title-color);
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-items: center;
 }
+.comand-soc-link:hover,
+.comand-soc-link:focus{
+    background-color: #2196F3;
+}
 
 .comand-soc-icon{
-    fill: brown;
+    fill: #AFB1B8;
+    width: 20px;
+    height: 20px;
 
 }
