--- a/css/style.css
+++ b/css/style.css
@@ -532,3 +532,9 @@ justify-content: center;
     height: 20px;
 
 }
+
+.cont-icon {
+    vertical-align: middle;
+    margin-right: 10px;
+    fill: currentColor;
+}
