--- a/css/style.css
+++ b/css/style.css
@@ -490,6 +490,21 @@ color:var(--two-title-color);
 .client-list{
     display: flex;
     padding-inline-start: 0;
+    justify-content: center;
+}
+.client-item:not(:last-child){
+   margin-right: 30px; 
+}
+.client-link{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #afb1b8;
+    border-radius: 4px;
+    cursor: pointer;
+    fill: #AFB1B8;;
 }
 .cont-icon{
     /*display: block;*/
