--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,7 @@ padding-right: 8px;}
     color: var(--primary-text-color);
     width: 270px;
 }
-.task,  .comand {
+.task,  .comand, .client {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
@@ -290,14 +290,17 @@ color:var(--two-title-color);
 .style{
     font-style:normal; /*убрали курсив*/
 }
-.footer-effect{
+.footer{
     background-color:var(--effect-color);
-    padding:0px 0;
-    margin:0px ;  
+  /*  padding:0px 0;
+    margin:0px ; */
     padding-top: 60px;
     padding-bottom: 60px;
-
 }
+.footer .container{
+    display: flex;
+}
+
 .foot{
     /*font-size: 14px;*/
     line-height: 1.71;
@@ -373,9 +376,19 @@ ul {
     list-style: none;*/
     display: flex;
 }
-.item-type:not(:last-child) {
-        margin-right: 30px;
+.aside-item:not(:last-child) {
+    margin-right: 30px;
 }
+.aside-icon{
+    width: 270px;
+    height: 120px;
+    background-color: #F5F4FA;
+    margin-bottom: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .section-about{
     padding-top: 0px;
 }
@@ -486,7 +499,23 @@ ul {
 background-color: var(--accent-color);
 color:var(--two-title-color);
 }
+
+.item-potfolio:hover {
+
+box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);;
+
+}
 /*------4-----*/
+.client-title{
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    color: var(--main-title-color);
+}
+
 .client-list{
     display: flex;
     padding-inline-start: 0;
@@ -496,8 +525,8 @@ color:var(--two-title-color);
    margin-right: 30px; 
 }
 .client-link{
-    width: 100%;
-    height: 100%;
+    width: 170px;
+    height: 92px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -506,6 +535,14 @@ color:var(--two-title-color);
     cursor: pointer;
     fill: #AFB1B8;;
 }
+
+.client-link:hover,
+.client-link:focus{
+    border: 1px solid #2196F3;
+    fill: #2196F3;
+    /*background-color: #2196F3;*/
+}
+
 .cont-icon{
     /*display: block;*/
     margin-right: 10px;
@@ -552,4 +589,59 @@ justify-content: center;
     vertical-align: middle;
     margin-right: 10px;
     fill: currentColor;
+}
+
+.client-item {
+    flex-basis: calc(100% / 6 - 30px);
+    margin-left: 30px;
+}
+.footer-right {
+    margin-left: 70px;
+}
+
+.footer-title {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #EEEEEE;
+    margin-bottom: 20px;
+}
+.footer-soc-list {
+    display: flex;
+}
+.footer-soc-item {
+    width: 44px;
+    height: 44px;
+    margin-right: 10px;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+}
+
+.footer-soc-link:hover,
+.footer-soc-link:focus {
+    background-color:var(--accent-color);
+  
+}
+.footer-soc-item {
+    width: 44px;
+    height: 44px;
+    margin-right: 10px;
+}
+.footer-soc-link {
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    fill: #AFB1B8;
+    background-color: rgba(255, 255, 255, 0.1);
+        ;
+}
+.footer-soc-link:not(:last-child)
+ {
+    margin-right: 10px;
 }
