--- a/css/style.css
+++ b/css/style.css
@@ -160,16 +160,9 @@ a {
     width: 200px;
     height: 50px;
     color: var(--two-title-color);
-    /*margin: auto;
-    display: block;
-    align-items: center;
-    text-align: center;*/
+   
 }
 .btn-item{
-    /*width: 200px;*/
-    height: 50px;
-    /*background: var(--accent-color);*/
-   
     font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
@@ -299,6 +292,7 @@ color:var(--two-title-color);
 }
 .footer .container{
     display: flex;
+    align-items: baseline;
 }
 
 .foot{
@@ -549,40 +543,42 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
     fill:currentColor;
 }
 /*-----------4 HT------*/
-.comand-soc-list{
-display: flex;
-justify-content: center;
+.team-soc-list {
+    display: flex;
+    justify-content: center;
 }
-.comand-soc-item{
-    /*width: 20px;
-    height: 20px;*/
-    margin-right: 10px; ;
-}
-.comand-soc-item:last-child{
-    margin-right: 0;
+.team-soc-item {
+    width: 44px;
+    height: 44px;
+    margin-right: 10px;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
 }
 
-.comand-soc-link{
-   /* width: 100%;
-    height: 100%;*/
+.team-soc-item {
     width: 44px;
-    height: 44px;  
-    background-color: var(--two-title-color);
+    height: 44px;
+    margin-right: 10px;
+}
+
+.team-soc-link {
+    width: 44px;
+    height: 44px;
     border-radius: 50%;
     display: flex;
     align-items: center;
-    justify-items: center;
-}
-.comand-soc-link:hover,
-.comand-soc-link:focus{
-    background-color: #2196F3;
-}
-
-.comand-soc-icon{
+    justify-content: center;
     fill: #AFB1B8;
-    width: 20px;
-    height: 20px;
+}
 
+.team-soc-link:not(:last-child){
+    margin-right: 10px;
+}
+
+.team-soc-link:hover, .team-soc-icon:hover
+.team-soc-link:focus, .team-soc-icon:focus {
+    background-color: #2196f3;
+    fill:#FFFFFF;
 }
 
 .cont-icon {
@@ -606,7 +602,7 @@ justify-content: center;
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #EEEEEE;
+    color: var(--two-title-color);
     margin-bottom: 20px;
 }
 .footer-soc-list {
@@ -623,6 +619,7 @@ justify-content: center;
 .footer-soc-link:hover,
 .footer-soc-link:focus {
     background-color:var(--accent-color);
+    cursor: pointer;
   
 }
 .footer-soc-item {
@@ -637,7 +634,7 @@ justify-content: center;
     display: flex;
     align-items: center;
     justify-content: center;
-    fill: #AFB1B8;
+    fill: var(--main-btn-color);
     background-color: rgba(255, 255, 255, 0.1);
         ;
 }
