--- a/css/style.css
+++ b/css/style.css
@@ -405,8 +405,8 @@ ul {
 .team{
     background-color:var(--btn-comand);
 }
+
 .comand{
-   
     margin: 0;
     margin-bottom: 50px;
 }
@@ -440,6 +440,12 @@ ul {
      /*border: 1px solid #c5c5c5;
     border-top: 0px;*/
 }
+.team-soc-link:hover,
+.team-soc-link:focus {
+    background-color: var(--accent-color);
+    fill: var(--text-white);
+}
+
 
 .foot-one{
     margin-top: 20px;}
@@ -540,7 +546,6 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
 .client-link:focus{
     border: 1px solid #2196F3;
     fill: #2196F3;
-    /*background-color: #2196F3;*/
 }
 
 .cont-icon{
@@ -559,6 +564,9 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
     margin-right: 10px;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
+}
+.team-soc-icon{
+    fill:#AFB1B8;
 }
 
 .team-soc-item {
@@ -581,11 +589,18 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
     margin-right: 10px;
 }
 
-.team-soc-link:hover, .team-soc-icon:hover
-.team-soc-link:focus, .team-soc-icon:focus {
-    background-color: #2196f3;
-    fill:#FFFFFF;
+.team-soc-link:hover,
+.team-soc-link:focus{
+   background-color:  #2196F3;
+    fill: red;
 }
+ .team-soc-icon:hover,
+.team-soc-icon:focus {
+    /*background-color: #052b4a;*/
+    fill: #ECECEC;
+}
+
+
 
 .cont-icon {
     vertical-align: middle;
