--- a/css/style.css
+++ b/css/style.css
@@ -545,7 +545,7 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
 .client-link:hover,
 .client-link:focus{
     border: 1px solid #2196F3;
-    fill: #2196F3;
+    fill: red;
 }
 
 .cont-icon{
