--- a/css/style.css
+++ b/css/style.css
@@ -544,7 +544,7 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
 
 .client-link:hover,
 .client-link:focus{
-    border: 1px solid #2196F3;
+    border: 1px solid red;
     fill: red;
 }
 
